# 4d-Editor

./: .gitignore  CMakeLists.txt  FILE FORMAT.md  README.md  imgui.ini
4d Object Editor/: editController.cpp  editController.hpp  main.cpp  meshEditor.cpp  meshEditor.hpp
4d Object Editor/Renderer/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shaderProgram.cpp  shaderProgram.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
4d Object Editor/utils/: math4d.cpp  math4d.hpp  raycast.cpp  raycast.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
Resources/: 120-cell.obj4d  16-cell.obj4d  24-cell.obj4d  600-cell.obj4d  C_F.obj4d  doucylinder_20.obj4d  duocircle.obj4d  func_bulk16x16x16.texture  func_bulk2x2x2.texture  func_bulk4x4x4.texture  func_bulk8x8x8.texture  func_tex_16x16x16.texture  func_tex_2x2x2.texture  func_tex_4x4x4.texture  func_tex_8x8x8.texture  grad_tex_2x2x2.texture  grad_tex_8x8x8.texture  hc.obj4d  hypercube.obj4d  hypersphere_10.obj4d  hypersphere_4.obj4d  icos_crystal.obj4d  icos_tree.obj4d  modifiedCube.obj4d  orientation_block.obj4d  path_trace.obj4d  plane 2.obj4d  plane.obj4d  striped_tex2.texture  striped_tex4.texture  striped_tex8.texture  subdiv_plane_10.obj4d  subdiv_plane_4.obj4d  tight_menger_1.obj4d
Shaders/: fulscreen_quad_vert.glsl  line_frag.glsl  line_vert.glsl  point_frag.glsl  point_geom.glsl  point_vert.glsl  slice_frag.glsl  slice_geom.glsl  slice_vert.glsl  tex_combiner_frag.glsl  translucent_frag.glsl  translucent_vert.glsl
